# rest-todo-app

./: README.md  main.py  pyproject.toml
static/: index.html
todo_rest/: __init__.py  app.py
todo_rest/static/: index.html
