[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-rest"
version = "0.1.3"
description = "A simple todo list REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
todo-rest = "todo_rest.app:main"

[tool.hatch.build.targets.wheel]
packages = ["todo_rest"]
include = ["todo_rest/static/**/*"]
